<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size_normal"
        android:layout_margin="@dimen/quarter_standard_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:ems="@integer/name_ems" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/name"
            android:layout_toEndOf="@+id/name"
            android:ems="1"
            android:gravity="start"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/times_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/quantity"
            android:layout_toEndOf="@+id/quantity"
            android:ems="1"
            android:gravity="start"
            android:text="@string/x" />

        <TextView
            android:id="@+id/price_in_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/times_checkout"
            android:layout_toEndOf="@+id/times_checkout"
            android:ems="@integer/price_ems"
            android:gravity="start" />

        <TextView
            android:id="@+id/currency_symbol_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/price_in_currency"
            android:layout_toEndOf="@+id/price_in_currency"
            android:ems="@integer/name_ems"
            android:gravity="start"
            android:text="@string/gbp" />

        <TextView
            android:id="@+id/equal_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/currency_symbol_one"
            android:layout_toEndOf="@+id/currency_symbol_one"
            android:gravity="start"
            android:text="@string/equal" />

        <TextView
            android:id="@+id/total_amount_in_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/equal_currency"
            android:layout_toEndOf="@+id/equal_currency"
            android:ems="@integer/price_ems"
            android:gravity="start" />

        <TextView
            android:id="@+id/currency_simbol_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/total_amount_in_currency"
            android:layout_toEndOf="@+id/total_amount_in_currency"
            android:ems="@integer/name_ems"
            android:gravity="start"
            android:text="@string/gbp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>